Rules to correct checkbox input and label alignment with this operatorhub filter-panel Bug https://bugzilla.redhat.com/show_bug.cgi?id=1872138

--- a/frontend/public/style/_overrides.scss
+++ b/frontend/public/style/_overrides.scss
@@ -26,6 +26,17 @@ form.pf-c-form {
   @include co-break-word;
 }
 
+// For input & label alignment while using bootstrap with @patternfly/react-catalog-view-extension
+.filter-panel-pf-category-item {
+  .pf-c-check {
+    align-items: inherit;
+  }
+
+  .pf-c-check__input {
+    margin-top: 2px;
+  }
+}
+
 kbd {
   border-radius: 3px;
   box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.25);
